--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ name = "django-queryhunter"
 packages = [
   { include = "queryhunter" }
 ]
-version = "0.1.7"
+version = "0.1.6-dev"
 description = "Map your Django application code to the SQL queries it produces."
 authors = ["Paul Gilmartin"]
 classifiers = [
